# zero2prod

./: Cargo.toml
.github/workflows/: main.yml
migrations/: 20211208195653_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
