[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Davide Savazzi"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.13"
actix-http = "=3.0.0-beta.14"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
